# FakaBot

./: .gitignore  README.md  main.py  pyproject.toml
discord_api/: api.py
discord_api/models/: Action.py  Command.py  __init__.py
discord_api/src/: PlaySelector.py  __init__.py
logger/: logger.py
settings/: settings.py
youtube_api/: api.py
youtube_api/models/: Video.py
